--- a/config/apextoolgroup/default/core.entity_view_display.node.homepage_products.default.yml
+++ b/config/apextoolgroup/default/core.entity_view_display.node.homepage_products.default.yml
@@ -24,16 +24,17 @@ content:
     weight: 101
     region: content
   field_media:
-    type: entity_reference_label
-    label: above
+    type: entity_reference_entity_view
+    label: hidden
     settings:
-      link: true
+      view_mode: embed
+      link: false
     third_party_settings: {  }
     weight: 102
     region: content
   field_read_more:
     type: link
-    label: above
+    label: hidden
     settings:
       trim_length: 80
       url_only: false
