--- a/config/apextoolgroup/default/block.block.views_block__brands_homepage_brand_block.yml
+++ b/config/apextoolgroup/default/block.block.views_block__brands_homepage_brand_block.yml
@@ -1,6 +1,6 @@
 uuid: 14abef10-808c-4dad-b3ea-5abebe8fc01c
 langcode: en
-status: true
+status: false
 dependencies:
   config:
     - views.view.brands
