APEX-400:Added Product migration asset mapping for secondaryimage.

--- a/docroot/modules/custom/cleco_migrations/config/install/migrate_plus.migration.cleco_products_de.yml
+++ b/docroot/modules/custom/cleco_migrations/config/install/migrate_plus.migration.cleco_products_de.yml
@@ -166,6 +166,7 @@ process:
     skip_primary_list: 1
     asset_type:
       - Beauty-Glamour Image
+      - SecondaryImage
     langcode: de
 
   status:
