--- a/config/clecotools/default/migrate_plus.migration.cleco_products_de.yml
+++ b/config/clecotools/default/migrate_plus.migration.cleco_products_de.yml
@@ -168,6 +168,7 @@ process:
     skip_primary_list: 1
     asset_type:
       - 'Beauty-Glamour Image'
+      - SecondaryImage
     langcode: de
   status:
     plugin: cleco_map_product_status
