--- a/config/clecotools/default/search_api.index.acquia_search_index.yml
+++ b/config/clecotools/default/search_api.index.acquia_search_index.yml
@@ -30,6 +30,7 @@ dependencies:
     - field.storage.node.field_sku_group
     - field.storage.node.field_slug
     - field.storage.node.field_upc
+    - field.storage.node.field_web_display_sort_order
     - search_api.server.acquia_search_api_solr_server
   module:
     - search_api_solr
@@ -380,6 +381,14 @@ field_settings:
     dependencies:
       config:
         - field.storage.node.field_video_popup
+  field_web_display_sort_order:
+    label: 'Web Display Sort Order'
+    datasource_id: 'entity:node'
+    property_path: field_web_display_sort_order
+    type: integer
+    dependencies:
+      config:
+        - field.storage.node.field_web_display_sort_order
   horsepower_hj:
     label: 'Horsepower (hj)'
     property_path: horsepower_hj
