--- a/config/apextoolgroup/default/core.entity_form_display.paragraph.image_with_cta.default.yml
+++ b/config/apextoolgroup/default/core.entity_form_display.paragraph.image_with_cta.default.yml
@@ -7,6 +7,7 @@ dependencies:
     - field.field.paragraph.image_with_cta.field_direction
     - field.field.paragraph.image_with_cta.field_link
     - field.field.paragraph.image_with_cta.field_media_item
+    - field.field.paragraph.image_with_cta.field_title
     - paragraphs.paragraphs_type.image_with_cta
   module:
     - link
@@ -19,7 +20,7 @@ mode: default
 content:
   field_content:
     type: text_textarea
-    weight: 0
+    weight: 1
     region: content
     settings:
       rows: 5
@@ -27,13 +28,13 @@ content:
     third_party_settings: {  }
   field_direction:
     type: options_select
-    weight: 1
+    weight: 2
     region: content
     settings: {  }
     third_party_settings: {  }
   field_link:
     type: link_default
-    weight: 2
+    weight: 3
     region: content
     settings:
       placeholder_url: ''
@@ -41,10 +42,18 @@ content:
     third_party_settings: {  }
   field_media_item:
     type: media_library_widget
-    weight: 3
+    weight: 4
     region: content
     settings:
       media_types: {  }
+    third_party_settings: {  }
+  field_title:
+    type: string_textfield
+    weight: 0
+    region: content
+    settings:
+      size: 60
+      placeholder: ''
     third_party_settings: {  }
 hidden:
   created: true
