--- a/config/apextoolgroup/default/core.entity_view_display.block_content.cta_block.default.yml
+++ b/config/apextoolgroup/default/core.entity_view_display.block_content.cta_block.default.yml
@@ -23,7 +23,7 @@ content:
     region: content
   field_link:
     type: link
-    label: above
+    label: hidden
     settings:
       trim_length: 80
       url_only: false
