--- a/config/apextoolgroup/default/core.entity_view_display.paragraph.image_with_cta.default.yml
+++ b/config/apextoolgroup/default/core.entity_view_display.paragraph.image_with_cta.default.yml
@@ -7,9 +7,11 @@ dependencies:
     - field.field.paragraph.image_with_cta.field_direction
     - field.field.paragraph.image_with_cta.field_link
     - field.field.paragraph.image_with_cta.field_media_item
+    - field.field.paragraph.image_with_cta.field_title
     - paragraphs.paragraphs_type.image_with_cta
   module:
     - link
+    - options
     - text
 id: paragraph.image_with_cta.default
 targetEntityType: paragraph
@@ -22,6 +24,13 @@ content:
     settings: {  }
     third_party_settings: {  }
     weight: 1
+    region: content
+  field_direction:
+    type: list_key
+    label: hidden
+    settings: {  }
+    third_party_settings: {  }
+    weight: 4
     region: content
   field_link:
     type: link
@@ -44,6 +53,13 @@ content:
     third_party_settings: {  }
     weight: 0
     region: content
+  field_title:
+    type: string
+    label: hidden
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    weight: 3
+    region: content
 hidden:
-  field_direction: true
   search_api_excerpt: true
