APEX-540: Add google map api in where to buy

--- a/docroot/modules/custom/campbell_where_to_buy/campbell_where_to_buy.services.yml
+++ b/docroot/modules/custom/campbell_where_to_buy/campbell_where_to_buy.services.yml
@@ -4,3 +4,6 @@ services:
     arguments:
       - '@entity_type.manager'
       - '@database'
+      - '@http_client'
+      - '@logger.factory'
+      - '@config.factory'
