--- a/config/apextoolgroup/default/core.extension.yml
+++ b/config/apextoolgroup/default/core.extension.yml
@@ -10,6 +10,7 @@ module:
   advagg_css_minify: 0
   advagg_js_minify: 0
   allowed_formats: 0
+  apex_tools_feeds: 0
   atg_brand_timeline: 0
   atg_common: 0
   automated_cron: 0
@@ -48,6 +49,7 @@ module:
   environment_indicator_ui: 0
   facets: 0
   feeds: 0
+  feeds_tamper: 0
   field: 0
   field_group: 0
   field_group_settings: 0
@@ -125,6 +127,7 @@ module:
   swiftmailer: 0
   syslog: 0
   system: 0
+  tamper: 0
   taxonomy: 0
   telephone: 0
   telephone_formatter: 0
