--- a/composer.json
+++ b/composer.json
@@ -370,6 +370,9 @@
             },
             "drupal/we_megamenu": {
                 "https://www.drupal.org/project/we_megamenu/issues/3226361": "https://www.drupal.org/files/issues/2022-05-30/3226361_10.patch"
+            },
+            "drupal/fixed_block_content": {
+                "Access Issue for anonymous users": "https://www.drupal.org/files/issues/2022-11-11/3272253-fixed_blocks_not_visible_to_guest_users-5.patch"
             }
 
         },
