--- a/config/apextoolgroup/default/block.block.warrantyblock.yml
+++ b/config/apextoolgroup/default/block.block.warrantyblock.yml
@@ -1,23 +1,23 @@
-uuid: 71840578-abfb-4bb5-a0f6-d154cd8f79b2
+uuid: 78e512c5-995b-44ff-a294-2ffafaf70366
 langcode: en
 status: true
 dependencies:
   config:
-    - fixed_block_content.fixed_block_content.homepage_cta_block
+    - fixed_block_content.fixed_block_content.warranty_block
   module:
     - fixed_block_content
     - system
   theme:
     - apextoolgroup
-id: homepagectablock
+id: warrantyblock
 theme: apextoolgroup
 region: content
-weight: -7
+weight: -4
 provider: null
-plugin: 'fixed_block_content:homepage_cta_block'
+plugin: 'fixed_block_content:warranty_block'
 settings:
-  id: 'fixed_block_content:homepage_cta_block'
-  label: 'Homepage CTA block'
+  id: 'fixed_block_content:warranty_block'
+  label: 'Warranty Block'
   label_display: '0'
   provider: fixed_block_content
   view_mode: ''
