--- a/config/apextoolgroup/default/views.view.homepage_news.yml
+++ b/config/apextoolgroup/default/views.view.homepage_news.yml
@@ -27,7 +27,7 @@ display:
     display_plugin: default
     position: 0
     display_options:
-      title: 'Homepage News'
+      title: 'Featured Press Releases'
       fields:
         field_media:
           id: field_media
@@ -185,7 +185,7 @@ display:
             max_length: 80
             word_boundary: true
             ellipsis: true
-            more_link: true
+            more_link: false
             more_link_text: 'Read More'
             more_link_path: '{{ view_node }}'
             strip_tags: true
@@ -291,7 +291,7 @@ display:
           entity_type: node
           plugin_id: entity_link
           label: ''
-          exclude: true
+          exclude: false
           alter:
             alter_text: false
             text: ''
