--- a/config/apextoolgroup/default/block.block.views_block__homepage_product_homepage_product_section.yml
+++ b/config/apextoolgroup/default/block.block.views_block__homepage_product_homepage_product_section.yml
@@ -1,22 +1,22 @@
-uuid: 14abef10-808c-4dad-b3ea-5abebe8fc01c
+uuid: d2e7df86-8760-43ab-851e-f77f878e6ec1
 langcode: en
-status: false
+status: true
 dependencies:
   config:
-    - views.view.brands
+    - views.view.homepage_product
   module:
     - system
     - views
   theme:
     - apextoolgroup
-id: views_block__brands_homepage_brand_block
+id: views_block__homepage_product_homepage_product_section
 theme: apextoolgroup
 region: content
-weight: -2
+weight: -5
 provider: null
-plugin: 'views_block:brands-homepage_brand_block'
+plugin: 'views_block:homepage_product-homepage_product_section'
 settings:
-  id: 'views_block:brands-homepage_brand_block'
+  id: 'views_block:homepage_product-homepage_product_section'
   label: ''
   label_display: '0'
   provider: views
