--- a/config/apextoolgroup/default/core.entity_form_display.block_content.cta_block.default.yml
+++ b/config/apextoolgroup/default/core.entity_form_display.block_content.cta_block.default.yml
@@ -6,6 +6,7 @@ dependencies:
     - block_content.type.cta_block
     - field.field.block_content.cta_block.body
     - field.field.block_content.cta_block.field_link
+    - field.field.block_content.cta_block.field_title
   module:
     - link
     - text
@@ -16,7 +17,7 @@ mode: default
 content:
   body:
     type: text_textarea_with_summary
-    weight: 26
+    weight: 3
     region: content
     settings:
       rows: 9
@@ -26,15 +27,23 @@ content:
     third_party_settings: {  }
   field_link:
     type: link_default
-    weight: 27
+    weight: 4
     region: content
     settings:
       placeholder_url: ''
       placeholder_title: ''
     third_party_settings: {  }
+  field_title:
+    type: string_textfield
+    weight: 2
+    region: content
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
   info:
     type: string_textfield
-    weight: -5
+    weight: 0
     region: content
     settings:
       size: 60
@@ -42,7 +51,7 @@ content:
     third_party_settings: {  }
   langcode:
     type: language_select
-    weight: 2
+    weight: 1
     region: content
     settings:
       include_locked: true
