--- a/config/apextoolgroup/default/core.extension.yml
+++ b/config/apextoolgroup/default/core.extension.yml
@@ -11,6 +11,7 @@ module:
   advagg_js_minify: 0
   allowed_formats: 0
   atg_brand_timeline: 0
+  atg_common: 0
   automated_cron: 0
   better_exposed_filters: 0
   bg_image_formatter: 0
