--- a/config/apextoolgroup/default/block.block.producttypesheroimage.yml
+++ b/config/apextoolgroup/default/block.block.producttypesheroimage.yml
@@ -1,23 +1,23 @@
-uuid: da4771ae-2207-4edb-8cb0-e274ddfc861b
+uuid: d5d55278-4ec8-4b2b-8e98-99990f8840bd
 langcode: en
 status: true
 dependencies:
   config:
-    - fixed_block_content.fixed_block_content.news_page_top_section
+    - fixed_block_content.fixed_block_content.product_types_hero_image
   module:
     - fixed_block_content
     - system
   theme:
     - apextoolgroup
-id: newspagetopsection
+id: producttypesheroimage
 theme: apextoolgroup
 region: pre_content
-weight: -6
+weight: -10
 provider: null
-plugin: 'fixed_block_content:news_page_top_section'
+plugin: 'fixed_block_content:product_types_hero_image'
 settings:
-  id: 'fixed_block_content:news_page_top_section'
-  label: 'News page top section'
+  id: 'fixed_block_content:product_types_hero_image'
+  label: 'Product Types Hero Image'
   label_display: '0'
   provider: fixed_block_content
   view_mode: ''
@@ -25,4 +25,4 @@ visibility:
   request_path:
     id: request_path
     negate: false
-    pages: '/newsroom/*'
+    pages: /product-types
