--- a/config/crescenttool_au/default/migrate_plus.migration.crescenttool_au_products.yml
+++ b/config/crescenttool_au/default/migrate_plus.migration.crescenttool_au_products.yml
@@ -104,6 +104,10 @@ source:
       name: remote_brand
       label: Brand
       selector: './/*[@AttributeID=''Brand'']'
+    - 
+      name: status
+      label: Status
+      selector: './Values/Value[@AttributeID="SAP_SALES_ORG_STATUS"]/@ID'
     -
       name: remote_sales_org_status
       label: 'Sales Org Status'
@@ -122,12 +126,6 @@ process:
     value:
       - Z3
       - Z4
-  sales_org_status:
-    plugin: skip_on_value
-    not_equals: true
-    source: remote_sales_org_status
-    method: row
-    value: Active
   sales_org:
     plugin: skip_on_value
     not_equals: true
