APEX-265: Share block enabled

--- a/config/apextoolgroup/default/block.block.views_block__footer_social_block_social_media_footer.yml
+++ b/config/apextoolgroup/default/block.block.views_block__footer_social_block_social_media_footer.yml
@@ -1,6 +1,6 @@
 uuid: e9e8b094-8405-473e-bcd9-e159c96567b3
 langcode: en
-status: false
+status: true
 dependencies:
   config:
     - views.view.footer_social_block
