--- a/config/apextoolgroup/default/core.entity_view_display.node.brand_timeline.teaser.yml
+++ b/config/apextoolgroup/default/core.entity_view_display.node.brand_timeline.teaser.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - core.entity_view_mode.node.teaser
     - field.field.node.brand_timeline.body
+    - field.field.node.brand_timeline.feeds_item
     - field.field.node.brand_timeline.field_event_date
     - field.field.node.brand_timeline.field_event_media_link
     - field.field.node.brand_timeline.field_media
@@ -31,6 +32,7 @@ content:
     weight: 100
     region: content
 hidden:
+  feeds_item: true
   field_event_date: true
   field_event_media_link: true
   field_media: true
