--- a/config/apextoolgroup/default/feeds.feed_type.brand_timeline.yml
+++ b/config/apextoolgroup/default/feeds.feed_type.brand_timeline.yml
@@ -110,8 +110,8 @@ mappings:
       value: body
       summary: ''
     settings:
-      language: null
-      format: plain_text
+      language: ''
+      format: full_html
   -
     target: field_event_media_link
     map:
