--- a/config/apextoolgroup/default/feeds.feed_type.news.yml
+++ b/config/apextoolgroup/default/feeds.feed_type.news.yml
@@ -142,8 +142,8 @@ mappings:
       value: body
       summary: ''
     settings:
-      language: null
-      format: plain_text
+      language: ''
+      format: full_html
   -
     target: field_date
     map:
