--- a/config/apextoolgroup/default/core.entity_view_display.node.news.default.yml
+++ b/config/apextoolgroup/default/core.entity_view_display.node.news.default.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - field.field.node.news.body
+    - field.field.node.news.feeds_item
     - field.field.node.news.field_banner_image
     - field.field.node.news.field_date
     - field.field.node.news.field_is_featured
@@ -78,6 +79,7 @@ content:
     weight: 4
     region: content
 hidden:
+  feeds_item: true
   field_is_featured: true
   field_news_type: true
   field_read_more: true
