--- a/config/apextoolgroup/default/core.entity_view_display.node.news.search_index.yml
+++ b/config/apextoolgroup/default/core.entity_view_display.node.news.search_index.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - core.entity_view_mode.node.search_index
     - field.field.node.news.body
+    - field.field.node.news.feeds_item
     - field.field.node.news.field_banner_image
     - field.field.node.news.field_date
     - field.field.node.news.field_is_featured
@@ -44,6 +45,7 @@ content:
     weight: 0
     region: content
 hidden:
+  feeds_item: true
   field_banner_image: true
   field_date: true
   field_is_featured: true
