--- a/config/apextoolgroup/default/core.entity_view_display.node.news.teaser.yml
+++ b/config/apextoolgroup/default/core.entity_view_display.node.news.teaser.yml
@@ -5,12 +5,14 @@ dependencies:
   config:
     - core.entity_view_mode.node.teaser
     - field.field.node.news.body
+    - field.field.node.news.feeds_item
     - field.field.node.news.field_banner_image
     - field.field.node.news.field_date
     - field.field.node.news.field_is_featured
     - field.field.node.news.field_media
     - field.field.node.news.field_news_release_document
     - field.field.node.news.field_news_type
+    - field.field.node.news.field_read_more
     - field.field.node.news.field_sub_heading
     - node.type.news
   module:
@@ -35,12 +37,14 @@ content:
     weight: 100
     region: content
 hidden:
+  feeds_item: true
   field_banner_image: true
   field_date: true
   field_is_featured: true
   field_media: true
   field_news_release_document: true
   field_news_type: true
+  field_read_more: true
   field_sub_heading: true
   langcode: true
   search_api_excerpt: true
