--- a/config/apextoolgroup/default/core.entity_view_display.node.office.default.yml
+++ b/config/apextoolgroup/default/core.entity_view_display.node.office.default.yml
@@ -6,14 +6,17 @@ dependencies:
     - field.field.node.office.body
     - field.field.node.office.field_address
     - field.field.node.office.field_category
+    - field.field.node.office.field_learn_about_our_process_ti
     - field.field.node.office.field_location
     - field.field.node.office.field_phone
     - field.field.node.office.field_read_more
+    - field.field.node.office.field_sub_heading
     - node.type.office
   module:
     - address
     - geolocation
     - link
+    - telephone
     - text
     - user
 id: node.office.default
@@ -43,6 +46,14 @@ content:
     third_party_settings: {  }
     weight: 104
     region: content
+  field_learn_about_our_process_ti:
+    type: string
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    weight: 108
+    region: content
   field_location:
     type: geolocation_latlng
     label: above
@@ -51,9 +62,10 @@ content:
     weight: 102
     region: content
   field_phone:
-    type: basic_string
+    type: telephone_link
     label: above
-    settings: {  }
+    settings:
+      title: ''
     third_party_settings: {  }
     weight: 106
     region: content
@@ -68,6 +80,14 @@ content:
       target: ''
     third_party_settings: {  }
     weight: 105
+    region: content
+  field_sub_heading:
+    type: string
+    label: hidden
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    weight: 107
     region: content
   links:
     settings: {  }
