--- a/config/apextoolgroup/default/core.entity_view_display.node.office.teaser.yml
+++ b/config/apextoolgroup/default/core.entity_view_display.node.office.teaser.yml
@@ -7,9 +7,11 @@ dependencies:
     - field.field.node.office.body
     - field.field.node.office.field_address
     - field.field.node.office.field_category
+    - field.field.node.office.field_learn_about_our_process_ti
     - field.field.node.office.field_location
     - field.field.node.office.field_phone
     - field.field.node.office.field_read_more
+    - field.field.node.office.field_sub_heading
     - node.type.office
   module:
     - text
@@ -35,8 +37,10 @@ content:
 hidden:
   field_address: true
   field_category: true
+  field_learn_about_our_process_ti: true
   field_location: true
   field_phone: true
   field_read_more: true
+  field_sub_heading: true
   langcode: true
   search_api_excerpt: true
