--- a/config/apextoolgroup/default/block.block.newspagetopsection.yml
+++ b/config/apextoolgroup/default/block.block.newspagetopsection.yml
@@ -12,7 +12,7 @@ dependencies:
 id: newspagetopsection
 theme: apextoolgroup
 region: pre_content
-weight: -6
+weight: -7
 provider: null
 plugin: 'fixed_block_content:news_page_top_section'
 settings:
@@ -25,4 +25,4 @@ visibility:
   request_path:
     id: request_path
     negate: false
-    pages: '/newsroom/*'
+    pages: "/newsroom/*\r\n/newsroom"
