--- a/config/apextoolgroup/default/views.view.atg_news.yml
+++ b/config/apextoolgroup/default/views.view.atg_news.yml
@@ -356,7 +356,7 @@ display:
           output_url_as_text: true
           absolute: false
       pager:
-        type: mini
+        type: full
         options:
           offset: 0
           items_per_page: 10
@@ -365,6 +365,8 @@ display:
           tags:
             next: ››
             previous: ‹‹
+            first: First
+            last: Last
           expose:
             items_per_page: false
             items_per_page_label: 'Items per page'
@@ -373,6 +375,7 @@ display:
             items_per_page_options_all_label: '- All -'
             offset: false
             offset_label: Offset
+          quantity: 3
       exposed_form:
         type: bef
         options:
@@ -771,7 +774,7 @@ display:
           type: datetime_custom
           settings:
             timezone_override: ''
-            date_format: 'M j, Y'
+            date_format: 'l, F j, Y'
           group_column: value
           group_columns: {  }
           group_rows: true
@@ -1220,7 +1223,7 @@ display:
           type: datetime_custom
           settings:
             timezone_override: ''
-            date_format: 'M j'
+            date_format: 'l, F j, Y'
           group_column: value
           group_columns: {  }
           group_rows: true
@@ -1487,70 +1490,6 @@ display:
           click_sort_column: value
           type: text_default
           settings: {  }
-          group_column: value
-          group_columns: {  }
-          group_rows: true
-          delta_limit: 0
-          delta_offset: 0
-          delta_reversed: false
-          delta_first_last: false
-          multi_type: separator
-          separator: ', '
-          field_api_classes: false
-        field_date_1:
-          id: field_date_1
-          table: node__field_date
-          field: field_date
-          relationship: none
-          group_type: group
-          admin_label: ''
-          plugin_id: field
-          label: year
-          exclude: false
-          alter:
-            alter_text: false
-            text: ''
-            make_link: false
-            path: ''
-            absolute: false
-            external: false
-            replace_spaces: false
-            path_case: none
-            trim_whitespace: false
-            alt: ''
-            rel: ''
-            link_class: ''
-            prefix: ''
-            suffix: ''
-            target: ''
-            nl2br: false
-            max_length: 0
-            word_boundary: true
-            ellipsis: true
-            more_link: false
-            more_link_text: ''
-            more_link_path: ''
-            strip_tags: false
-            trim: false
-            preserve_tags: ''
-            html: false
-          element_type: ''
-          element_class: ''
-          element_label_type: ''
-          element_label_class: ''
-          element_label_colon: false
-          element_wrapper_type: ''
-          element_wrapper_class: ''
-          element_default_classes: true
-          empty: ''
-          hide_empty: false
-          empty_zero: false
-          hide_alter_empty: true
-          click_sort_column: value
-          type: datetime_default
-          settings:
-            timezone_override: ''
-            format_type: html_year
           group_column: value
           group_columns: {  }
           group_rows: true
