Added language configs

--- a/config/apex-tools/default/block.block.breadcrumbs.yml
+++ b/config/apex-tools/default/block.block.breadcrumbs.yml
@@ -5,9 +5,9 @@ dependencies:
   module:
     - system
   theme:
-    - cleco
+    - apex_tools
 id: breadcrumbs
-theme: cleco
+theme: apex_tools
 region: breadcrumb
 weight: 0
 provider: null
