--- a/config/apex-tools/default/block.block.help.yml
+++ b/config/apex-tools/default/block.block.help.yml
@@ -5,9 +5,9 @@ dependencies:
   module:
     - help
   theme:
-    - cleco
+    - apex_tools
 id: help
-theme: cleco
+theme: apex_tools
 region: content
 weight: -6
 provider: null
