--- a/config/apex-tools/default/block.block.mainpagecontent.yml
+++ b/config/apex-tools/default/block.block.mainpagecontent.yml
@@ -5,9 +5,9 @@ dependencies:
   module:
     - system
   theme:
-    - cleco
+    - apex_tools
 id: mainpagecontent
-theme: cleco
+theme: apex_tools
 region: content
 weight: -8
 provider: null
