--- a/config/apex-tools/default/block.block.pagetitle.yml
+++ b/config/apex-tools/default/block.block.pagetitle.yml
@@ -3,9 +3,9 @@ langcode: en
 status: false
 dependencies:
   theme:
-    - cleco
+    - apex_tools
 id: pagetitle
-theme: cleco
+theme: apex_tools
 region: content
 weight: -7
 provider: null
