--- a/config/apex-tools/default/block.block.tabs.yml
+++ b/config/apex-tools/default/block.block.tabs.yml
@@ -3,9 +3,9 @@ langcode: en
 status: true
 dependencies:
   theme:
-    - cleco
+    - apex_tools
 id: tabs
-theme: cleco
+theme: apex_tools
 region: content
 weight: -9
 provider: null
