--- a/config/apex-tools/default/language.negotiation.yml
+++ b/config/apex-tools/default/language.negotiation.yml
@@ -1,10 +1,10 @@
 url:
   source: domain
   prefixes:
-    en: ''
-    de: ''
-    gb: ''
+    en: en
+    de: de
+    gb: gb
   domains:
-    en: apex-tools.ddev.site
-    de: de.apex-tools.ddev.site
-    gb: uk.apex-tools.ddev.site
+    en: www.apex-tools.com
+    de: www.apex-tools.de
+    gb: www.apex-tools.co.uk
