--- a/config/apex-tools/default/block.block.footerutilseuropede_2.yml
+++ b/config/apex-tools/default/block.block.footerutilseuropede_2.yml
@@ -1,23 +1,23 @@
-uuid: 54abaec5-c634-4909-b195-6860fdff5d62
+uuid: 66c74ce8-4823-4b0f-8d35-db3439960811
 langcode: en
 status: true
 dependencies:
   config:
-    - system.menu.footer
+    - system.menu.footer-utils--de
   module:
     - language
     - system
   theme:
     - apex_tools
-id: apex_tools_footernorthamericaen_2
+id: footerutilseuropede_2
 theme: apex_tools
-region: footer_nav
+region: footer_utils_nav
 weight: 0
 provider: null
-plugin: 'system_menu_block:footer'
+plugin: 'system_menu_block:footer-utils--de'
 settings:
-  id: 'system_menu_block:footer'
-  label: 'Footer (North America / EN)'
+  id: 'system_menu_block:footer-utils--de'
+  label: 'Footer Utils (Europe / DE)'
   label_display: visible
   provider: system
   level: 1
@@ -30,4 +30,4 @@ visibility:
     context_mapping:
       language: '@language.current_language_context:language_interface'
     langcodes:
-      en: en
+      de: de
