--- a/config/apex-tools/default/block.block.footerutilsnorthamericaen_2.yml
+++ b/config/apex-tools/default/block.block.footerutilsnorthamericaen_2.yml
@@ -1,23 +1,23 @@
-uuid: 8d11790c-265b-4dcf-be23-82f94c4403eb
+uuid: 688d65e1-1052-4a5c-b68e-af6193798d82
 langcode: en
 status: true
 dependencies:
   config:
-    - system.menu.header-utils
+    - system.menu.footer-utils
   module:
     - language
     - system
   theme:
     - apex_tools
-id: apex_tools_headerutilsnorthamericaen_2
+id: footerutilsnorthamericaen_2
 theme: apex_tools
-region: header_utils_nav
+region: footer_utils_nav
 weight: 0
 provider: null
-plugin: 'system_menu_block:header-utils'
+plugin: 'system_menu_block:footer-utils'
 settings:
-  id: 'system_menu_block:header-utils'
-  label: 'Header Utils (North America / EN)'
+  id: 'system_menu_block:footer-utils'
+  label: 'Footer Utils (North America / EN)'
   label_display: visible
   provider: system
   level: 1
