--- a/config/apex-tools/default/block.block.mainnavigationeuropede_2.yml
+++ b/config/apex-tools/default/block.block.mainnavigationeuropede_2.yml
@@ -1,23 +1,23 @@
-uuid: 802e9173-9d6e-4dc3-b4a2-06200991820a
+uuid: b026f6e3-b46d-4103-a58d-b9a09f98c953
 langcode: en
 status: true
 dependencies:
   config:
-    - system.menu.header-utils--de
+    - system.menu.main--de
   module:
     - language
     - system
   theme:
     - apex_tools
-id: apex_tools_headerutilseuropede_2
+id: mainnavigationeuropede_2
 theme: apex_tools
-region: header_utils_nav
-weight: 0
+region: main_nav
+weight: -8
 provider: null
-plugin: 'system_menu_block:header-utils--de'
+plugin: 'system_menu_block:main--de'
 settings:
-  id: 'system_menu_block:header-utils--de'
-  label: 'Header Utils (Europe / DE)'
+  id: 'system_menu_block:main--de'
+  label: 'Main navigation (Europe / DE)'
   label_display: visible
   provider: system
   level: 1
