--- a/config/apex-tools/default/block.block.mainnavigationeuropeen_2.yml
+++ b/config/apex-tools/default/block.block.mainnavigationeuropeen_2.yml
@@ -1,23 +1,23 @@
-uuid: ccb85eea-30be-4213-938b-a5b0cd1f5456
+uuid: 07215950-9b8d-4c7e-91b3-7c801651749e
 langcode: en
 status: true
 dependencies:
   config:
-    - system.menu.footer-utils--gb
+    - system.menu.main--gb
   module:
     - language
     - system
   theme:
     - apex_tools
-id: apex_tools_footerutilseuropeen_2
+id: mainnavigationeuropeen_2
 theme: apex_tools
-region: footer_utils_nav
-weight: 0
+region: main_nav
+weight: -7
 provider: null
-plugin: 'system_menu_block:footer-utils--gb'
+plugin: 'system_menu_block:main--gb'
 settings:
-  id: 'system_menu_block:footer-utils--gb'
-  label: 'Footer Utils (Europe / EN)'
+  id: 'system_menu_block:main--gb'
+  label: 'Main navigation (Europe / EN)'
   label_display: visible
   provider: system
   level: 1
