--- a/config/apex-tools/default/block.block.footereuropede_2.yml
+++ b/config/apex-tools/default/block.block.footereuropede_2.yml
@@ -1,23 +1,23 @@
-uuid: b3329c95-bf85-4d65-be69-5c091e6da2ee
+uuid: 1499016f-e417-4c91-909e-67a05ae8850b
 langcode: en
 status: true
 dependencies:
   config:
-    - system.menu.main--gb
+    - system.menu.footer--de
   module:
     - language
     - system
   theme:
     - apex_tools
-id: apex_tools_mainnavigationeuropeen_2
+id: footereuropede_2
 theme: apex_tools
-region: main_nav
-weight: -7
+region: footer_nav
+weight: 0
 provider: null
-plugin: 'system_menu_block:main--gb'
+plugin: 'system_menu_block:footer--de'
 settings:
-  id: 'system_menu_block:main--gb'
-  label: 'Main navigation (Europe / EN)'
+  id: 'system_menu_block:footer--de'
+  label: 'Footer (Europe / DE)'
   label_display: visible
   provider: system
   level: 1
@@ -30,4 +30,4 @@ visibility:
     context_mapping:
       language: '@language.current_language_context:language_interface'
     langcodes:
-      gb: gb
+      de: de
