--- a/config/apex-tools/default/block.block.footereuropeen_2.yml
+++ b/config/apex-tools/default/block.block.footereuropeen_2.yml
@@ -1,23 +1,23 @@
-uuid: a971f2b8-7fdd-4e37-9c86-eda7176f7a62
+uuid: 2844fd44-45ef-4767-92e3-43d2ab9b0355
 langcode: en
 status: true
 dependencies:
   config:
-    - system.menu.main--de
+    - system.menu.footer--gb
   module:
     - language
     - system
   theme:
     - apex_tools
-id: apex_tools_mainnavigationeuropede_2
+id: footereuropeen_2
 theme: apex_tools
-region: main_nav
-weight: -8
+region: footer_nav
+weight: 0
 provider: null
-plugin: 'system_menu_block:main--de'
+plugin: 'system_menu_block:footer--gb'
 settings:
-  id: 'system_menu_block:main--de'
-  label: 'Main navigation (Europe / DE)'
+  id: 'system_menu_block:footer--gb'
+  label: 'Footer (Europe / EN)'
   label_display: visible
   provider: system
   level: 1
@@ -30,4 +30,4 @@ visibility:
     context_mapping:
       language: '@language.current_language_context:language_interface'
     langcodes:
-      de: de
+      gb: gb
