--- a/config/apex-tools/default/block.block.headerutilseuropeen_2.yml
+++ b/config/apex-tools/default/block.block.headerutilseuropeen_2.yml
@@ -1,23 +1,23 @@
-uuid: eaf79c9f-21ac-4491-b9ad-36fe33c36d35
+uuid: a25d64b9-6816-4ee1-b74b-c3628fa03dc9
 langcode: en
 status: true
 dependencies:
   config:
-    - system.menu.footer-utils--de
+    - system.menu.header-utils--gb
   module:
     - language
     - system
   theme:
     - apex_tools
-id: apex_tools_footerutilseuropede_2
+id: headerutilseuropeen_2
 theme: apex_tools
-region: footer_utils_nav
+region: header_utils_nav
 weight: 0
 provider: null
-plugin: 'system_menu_block:footer-utils--de'
+plugin: 'system_menu_block:header-utils--gb'
 settings:
-  id: 'system_menu_block:footer-utils--de'
-  label: 'Footer Utils (Europe / DE)'
+  id: 'system_menu_block:header-utils--gb'
+  label: 'Header Utils (Europe / EN)'
   label_display: visible
   provider: system
   level: 1
@@ -30,4 +30,4 @@ visibility:
     context_mapping:
       language: '@language.current_language_context:language_interface'
     langcodes:
-      de: de
+      gb: gb
