--- a/config/apex-tools/default/block.block.headerutilsnorthamericaen_2.yml
+++ b/config/apex-tools/default/block.block.headerutilsnorthamericaen_2.yml
@@ -1,23 +1,23 @@
-uuid: 64a697f6-5aeb-4be9-81d5-915d3eff69a1
+uuid: 333a8ed6-79ac-411a-8007-19b1cd4661cf
 langcode: en
 status: true
 dependencies:
   config:
-    - system.menu.main
+    - system.menu.header-utils
   module:
     - language
     - system
   theme:
     - apex_tools
-id: apex_tools_mainnavigationnorthamericaen_2
+id: headerutilsnorthamericaen_2
 theme: apex_tools
-region: main_nav
-weight: -9
+region: header_utils_nav
+weight: 0
 provider: null
-plugin: 'system_menu_block:main'
+plugin: 'system_menu_block:header-utils'
 settings:
-  id: 'system_menu_block:main'
-  label: 'Main navigation (North America / EN)'
+  id: 'system_menu_block:header-utils'
+  label: 'Header Utils (North America / EN)'
   label_display: visible
   provider: system
   level: 1
