--- a/config/apex-tools/default/block.block.mainnavigationnorthamericaen_2.yml
+++ b/config/apex-tools/default/block.block.mainnavigationnorthamericaen_2.yml
@@ -1,23 +1,23 @@
-uuid: 01ee4c47-8532-4c04-bb09-6d5c88b0c7d6
+uuid: c61c1926-f5d5-4ef4-bc23-7b2f2654f594
 langcode: en
 status: true
 dependencies:
   config:
-    - system.menu.footer--de
+    - system.menu.main
   module:
     - language
     - system
   theme:
     - apex_tools
-id: apex_tools_footereuropede_2
+id: mainnavigationnorthamericaen_2
 theme: apex_tools
-region: footer_nav
-weight: 0
+region: main_nav
+weight: -9
 provider: null
-plugin: 'system_menu_block:footer--de'
+plugin: 'system_menu_block:main'
 settings:
-  id: 'system_menu_block:footer--de'
-  label: 'Footer (Europe / DE)'
+  id: 'system_menu_block:main'
+  label: 'Main navigation (North America / EN)'
   label_display: visible
   provider: system
   level: 1
@@ -30,4 +30,4 @@ visibility:
     context_mapping:
       language: '@language.current_language_context:language_interface'
     langcodes:
-      de: de
+      en: en
