--- a/config/apex-tools/default/webform.webform.request_a_quote.yml
+++ b/config/apex-tools/default/webform.webform.request_a_quote.yml
@@ -403,6 +403,7 @@ handlers:
       sender_name: ''
       theme_name: ''
       parameters: {  }
+      exclude_attachments: false
   email_4:
     id: email
     handler_id: email_4
