--- a/docroot/themes/custom/apextoolgroup/apextoolgroup.libraries.yml
+++ b/docroot/themes/custom/apextoolgroup/apextoolgroup.libraries.yml
@@ -23,7 +23,7 @@ global:
   css:
     theme:
       css/main.css : {}
-      
+
   js:
     js/main.js: {}
 
@@ -57,3 +57,6 @@ brand-timeline:
     - core/drupal
     - core/jquery
     - core/jquery.once
+faq-listing:
+  js:
+    js/faq-listing.js: {}
